# Pushka_bot

./: Dockerfile  README.md  alembic.ini  bot.py  pyproject.toml
audio/: processing.py
audio/vk/: auth.py  publish.py  upload.py
commands/: commands.py
database/: database.py  user_db.py  voice_ops.py
handlers/: admin.py  cancel.py  feedback.py  poems.py  share.py  start.py  training.py  voice.py
levels/: training_levels.py
migrations/: env.py
migrations/versions/: 158fb10f9603_добавление_поля_role_в_модель_user.py  19f4f5b8c638_add_image_field_to_poems_table.py  32ad117cd0df_fix_model_user.py  76eaa017ec99_added_models_migration.py  a2f6d7dd4bbf_initial_migration.py  d20dfc2d0b85_fix_model_user.py  dc3e88fd3015_обавил_biginteger_для_telegram_id.py
models/: __init__.py  poem.py  user.py  user_poem.py
